DE23270 fix ISP banner double border

--- a/src/apps/iterationtrackingboard/StatsBanner.less
+++ b/src/apps/iterationtrackingboard/StatsBanner.less
@@ -44,9 +44,7 @@
 .stats-banner {
 
   .stat-panel {
-    border-top: 1px solid @grey3;
     border-left: 1px solid @grey3;
-    border-bottom: 1px solid @grey3;
     height: 110px;
     text-align: center;
 
